finalized password generator

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       </header>
       <div class="card">
         <div class="card-header">
-          <h2>Generate a Password</h2>
+          <h2>Your 💪 & 🔐 Password</h2>
         </div>
         <div class="card-body">
           <textarea
             readonly
             id="password"
-            placeholder="Your Secure Password"
+            placeholder="When prompted, type an integer from 8 - 128 characters long."
             aria-label="Generated Password"
           ></textarea>
         </div>
@@ -29,7 +29,6 @@
         </div>
       </div>
     </div>
-    <!-- <script src="./assets/js/script.js"></script> -->
-    <script src="./assets/js/example.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
